Reduce Guava use (#755)
Mostly list construction methods