@@ -15,8 +15,6 @@
  */
 package com.hotels.styx.api;
 
-import com.google.common.collect.ImmutableSet;
-
 import java.util.Map;
 import java.util.Set;
 
@@ -38,7 +36,7 @@ public final class HttpMethod {
     public static final HttpMethod TRACE = new HttpMethod("TRACE");
     public static final HttpMethod CONNECT = new HttpMethod("CONNECT");
 
-    public static final Set<HttpMethod> METHODS = ImmutableSet.of(
+    public static final Set<HttpMethod> METHODS = Set.of(
             OPTIONS,
             GET,
             HEAD,
