@@ -19,11 +19,10 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 
@@ -61,9 +60,9 @@ public class SchemaTest {
                 + "  myOkValue: 5 \n"
                 + "  myNokValue: true \n");
 
-        integer().validate(ImmutableList.of("myOkValue"), root, root.get("myOkValue"), NO_EXTENSIONS);
+        integer().validate(List.of("myOkValue"), root, root.get("myOkValue"), NO_EXTENSIONS);
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> integer().validate(ImmutableList.of("myNokValue"), root, root.get("myNokValue"), NO_EXTENSIONS));
+                () -> integer().validate(List.of("myNokValue"), root, root.get("myNokValue"), NO_EXTENSIONS));
         assertEquals("Unexpected field type. Field 'myNokValue' should be INTEGER, but it is BOOLEAN", e.getMessage());
     }
 
@@ -73,9 +72,9 @@ public class SchemaTest {
                 + "  myOkValue: abc \n"
                 + "  myNokValue: 34 \n");
 
-        string().validate(ImmutableList.of("myOkValue"), root, root.get("myOkValue"), NO_EXTENSIONS);
+        string().validate(List.of("myOkValue"), root, root.get("myOkValue"), NO_EXTENSIONS);
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> string().validate(ImmutableList.of("myNokValue"), root, root.get("myNokValue"), NO_EXTENSIONS));
+                () -> string().validate(List.of("myNokValue"), root, root.get("myNokValue"), NO_EXTENSIONS));
         assertEquals("Unexpected field type. Field 'myNokValue' should be STRING, but it is NUMBER", e.getMessage());
     }
 
@@ -84,7 +83,7 @@ public class SchemaTest {
         JsonNode root = YAML_MAPPER.readTree(""
                 + "  myInt: '5' \n");
 
-        integer().validate(ImmutableList.of("myInt"), root, root.get("myInt"), NO_EXTENSIONS);
+        integer().validate(List.of("myInt"), root, root.get("myInt"), NO_EXTENSIONS);
     }
 
 
@@ -95,10 +94,10 @@ public class SchemaTest {
                 + "  myOkValue2: false \n"
                 + "  myNokValue: x \n");
 
-        bool().validate(ImmutableList.of("myOkValue1"), root, root.get("myOkValue1"), NO_EXTENSIONS);
-        bool().validate(ImmutableList.of("myOkValue2"), root, root.get("myOkValue2"), NO_EXTENSIONS);
+        bool().validate(List.of("myOkValue1"), root, root.get("myOkValue1"), NO_EXTENSIONS);
+        bool().validate(List.of("myOkValue2"), root, root.get("myOkValue2"), NO_EXTENSIONS);
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> bool().validate(ImmutableList.of("myNokValue"), root, root.get("myNokValue"), NO_EXTENSIONS));
+                () -> bool().validate(List.of("myNokValue"), root, root.get("myNokValue"), NO_EXTENSIONS));
         assertEquals("Unexpected field type. Field 'myNokValue' should be BOOLEAN, but it is STRING", e.getMessage());
     }
 
@@ -114,12 +113,12 @@ public class SchemaTest {
                 + "  myBool_06: 'FALSE' \n"
         );
 
-        bool().validate(ImmutableList.of(), rootObject, rootObject.get("myBool_01"), NO_EXTENSIONS);
-        bool().validate(ImmutableList.of(), rootObject, rootObject.get("myBool_02"), NO_EXTENSIONS);
-        bool().validate(ImmutableList.of(), rootObject, rootObject.get("myBool_03"), NO_EXTENSIONS);
-        bool().validate(ImmutableList.of(), rootObject, rootObject.get("myBool_04"), NO_EXTENSIONS);
-        bool().validate(ImmutableList.of(), rootObject, rootObject.get("myBool_05"), NO_EXTENSIONS);
-        bool().validate(ImmutableList.of(), rootObject, rootObject.get("myBool_06"), NO_EXTENSIONS);
+        bool().validate(List.of(), rootObject, rootObject.get("myBool_01"), NO_EXTENSIONS);
+        bool().validate(List.of(), rootObject, rootObject.get("myBool_02"), NO_EXTENSIONS);
+        bool().validate(List.of(), rootObject, rootObject.get("myBool_03"), NO_EXTENSIONS);
+        bool().validate(List.of(), rootObject, rootObject.get("myBool_04"), NO_EXTENSIONS);
+        bool().validate(List.of(), rootObject, rootObject.get("myBool_05"), NO_EXTENSIONS);
+        bool().validate(List.of(), rootObject, rootObject.get("myBool_06"), NO_EXTENSIONS);
     }
 
 
@@ -137,7 +136,7 @@ public class SchemaTest {
                                 field("surname", string()),
                                 field("age", integer())
                         ))
-                ).validate(ImmutableList.of(), rootObject, rootObject, x -> null));
+                ).validate(List.of(), rootObject, rootObject, x -> null));
         assertEquals("Missing a mandatory field 'root.surname'", e.getMessage());
     }
 
@@ -154,7 +153,7 @@ public class SchemaTest {
                         optional("favouriteFood", string()),
                         field("age", integer())
                 ))
-        ).validate(ImmutableList.of("root"), rootObject, rootObject, NO_EXTENSIONS);
+        ).validate(List.of("root"), rootObject, rootObject, NO_EXTENSIONS);
     }
 
 
@@ -173,7 +172,7 @@ public class SchemaTest {
                                 optional("favouriteFood", string()),
                                 field("age", integer())
                         ))
-                ).validate(ImmutableList.of(), rootObject, rootObject, NO_EXTENSIONS));
+                ).validate(List.of(), rootObject, rootObject, NO_EXTENSIONS));
         assertEquals("Unexpected field type. Field 'root.favouriteFood' should be STRING, but it is NUMBER", e.getMessage());
     }
 
@@ -193,7 +192,7 @@ public class SchemaTest {
                                 field("surname", string()),
                                 field("age", integer())
                         ))
-                ).validate(ImmutableList.of(), rootObject, rootObject, NO_EXTENSIONS));
+                ).validate(List.of(), rootObject, rootObject, NO_EXTENSIONS));
         assertEquals("Unexpected field: 'root.xyxz'", e.getMessage());
     }
 
@@ -209,7 +208,7 @@ public class SchemaTest {
                         field("root", object(
                                 field("myInt", integer())
                         ))
-                ).validate(ImmutableList.of(), rootObject, rootObject, NO_EXTENSIONS));
+                ).validate(List.of(), rootObject, rootObject, NO_EXTENSIONS));
         assertEquals("Unexpected field type. Field 'root.myInt' should be INTEGER, but it is STRING", e.getMessage());
     }
 
@@ -225,7 +224,7 @@ public class SchemaTest {
                         field("root", object(
                                 field("myString", string())
                         ))
-                ).validate(ImmutableList.of(), rootObject, rootObject, NO_EXTENSIONS));
+                ).validate(List.of(), rootObject, rootObject, NO_EXTENSIONS));
         assertEquals("Unexpected field type. Field 'root.myString' should be STRING, but it is NUMBER", e.getMessage());
     }
 
@@ -241,7 +240,7 @@ public class SchemaTest {
                         field("root", object(
                                 field("myBool", bool())
                         ))
-                ).validate(ImmutableList.of(), rootObject, rootObject, NO_EXTENSIONS));
+                ).validate(List.of(), rootObject, rootObject, NO_EXTENSIONS));
         assertEquals("Unexpected field type. Field 'root.myBool' should be BOOLEAN, but it is NUMBER", e.getMessage());
     }
 
@@ -301,7 +300,7 @@ public class SchemaTest {
                 () -> object(
                         field("parent", object(
                                 field("child", string())))
-                ).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
+                ).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'parent' should be OBJECT\\(parent\\), but it is STRING"));
     }
 
@@ -345,11 +344,11 @@ public class SchemaTest {
                         atLeastOne("http", "https")
                 )));
 
-        objectType.validate(ImmutableList.of(), first, first, NO_EXTENSIONS);
-        objectType.validate(ImmutableList.of(), second, second, NO_EXTENSIONS);
-        objectType.validate(ImmutableList.of(), both, both, NO_EXTENSIONS);
+        objectType.validate(List.of(), first, first, NO_EXTENSIONS);
+        objectType.validate(List.of(), second, second, NO_EXTENSIONS);
+        objectType.validate(List.of(), both, both, NO_EXTENSIONS);
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> objectType.validate(ImmutableList.of(), neither, neither, NO_EXTENSIONS));
+                () -> objectType.validate(List.of(), neither, neither, NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Schema constraint failed. At least one of \\('http', 'https'\\) must be present."));
     }
 
@@ -362,7 +361,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> list(string()).validate(ImmutableList.of("myList"), rootObject, rootObject.get("myList"), NO_EXTENSIONS));
+                () -> list(string()).validate(List.of("myList"), rootObject, rootObject.get("myList"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'myList\\[1\\]' should be STRING, but it is NUMBER"));
     }
 
@@ -375,7 +374,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> list(integer()).validate(ImmutableList.of("myList"), rootObject, rootObject.get("myList"), NO_EXTENSIONS));
+                () -> list(integer()).validate(List.of("myList"), rootObject, rootObject.get("myList"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'myList\\[0\\]' should be INTEGER, but it is STRING"));
     }
 
@@ -393,7 +392,7 @@ public class SchemaTest {
                 () -> list(object(
                         field("x", integer()),
                         field("y", integer())
-                )).validate(ImmutableList.of("myList"), rootObject, rootObject.get("myList"), NO_EXTENSIONS));
+                )).validate(List.of("myList"), rootObject, rootObject.get("myList"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'myList\\[1\\].x' should be INTEGER, but it is STRING"));
     }
 
@@ -412,7 +411,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> list(subObject).validate(ImmutableList.of("myList"), rootObject, rootObject.get("myList"), NO_EXTENSIONS));
+                () -> list(subObject).validate(List.of("myList"), rootObject, rootObject.get("myList"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'myList\\[1\\]' should be OBJECT\\(x, y\\), but it is STRING"));
     }
 
@@ -423,7 +422,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> list(integer()).validate(ImmutableList.of("myList"), root, root.get("myList"), NO_EXTENSIONS));
+                () -> list(integer()).validate(List.of("myList"), root, root.get("myList"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'myList' should be LIST\\(INTEGER\\), but it is STRING"));
     }
 
@@ -436,7 +435,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> list(integer()).validate(ImmutableList.of("myList"), root, root.get("myList"), NO_EXTENSIONS));
+                () -> list(integer()).validate(List.of("myList"), root, root.get("myList"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'myList' should be LIST\\(INTEGER\\), but it is OBJECT"));
     }
 
@@ -450,7 +449,7 @@ public class SchemaTest {
 
         Exception e = assertThrows(SchemaValidationException.class,
                 () -> list(object(field("a", integer()), field("b", integer())))
-                        .validate(ImmutableList.of("myList"), root, root.get("myList"), NO_EXTENSIONS));
+                        .validate(List.of("myList"), root, root.get("myList"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'myList' should be LIST\\(OBJECT\\(a, b\\)\\), but it is OBJECT"));
     }
 
@@ -458,7 +457,7 @@ public class SchemaTest {
     @Test
     public void routingObject_routingObjectDefinition() throws Exception {
 
-        Map<String, Schema.FieldType> extensions = ImmutableMap.of(
+        Map<String, Schema.FieldType> extensions = Map.of(
                 "ProxyTo", object(
                         field("id", string()),
                         field("destination", string())
@@ -500,7 +499,7 @@ public class SchemaTest {
                 () -> object(
                         field("config", union("type")),
                         field("type", string())
-                ).validate(ImmutableList.of("httpPipeline"), root, root.get("httpPipeline"), NO_EXTENSIONS));
+                ).validate(List.of("httpPipeline"), root, root.get("httpPipeline"), NO_EXTENSIONS));
         assertEquals("Union discriminator 'httpPipeline.config.type': Unexpected field type. Field 'httpPipeline.config.type' should be STRING, but it is NUMBER", e.getMessage());
     }
 
@@ -519,7 +518,7 @@ public class SchemaTest {
                 () -> object(
                         field("type", string()),
                         field("config", union("type"))
-                ).validate(ImmutableList.of("httpPipeline"), root, root.get("httpPipeline"), NO_EXTENSIONS));
+                ).validate(List.of("httpPipeline"), root, root.get("httpPipeline"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unknown union discriminator type 'Foo' for union 'httpPipeline.config'. Union type is UNION\\(type\\)"));
     }
 
@@ -527,7 +526,7 @@ public class SchemaTest {
     @Test
     public void union_validatesDiscriminatedUnions() throws Exception {
 
-        Map<String, Schema.FieldType> extensions = ImmutableMap.of(
+        Map<String, Schema.FieldType> extensions = Map.of(
                 "ProxyTo", object(
                         field("id", string()),
                         field("destination", string())
@@ -556,8 +555,8 @@ public class SchemaTest {
                 field("config", union("type"))
         );
 
-        unionSchema.validate(ImmutableList.of(), root, root.get("httpPipeline1"), extensions::get);
-        unionSchema.validate(ImmutableList.of(), root, root.get("httpPipeline2"), extensions::get);
+        unionSchema.validate(List.of(), root, root.get("httpPipeline1"), extensions::get);
+        unionSchema.validate(List.of(), root, root.get("httpPipeline2"), extensions::get);
     }
 
 
@@ -568,7 +567,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> map(string()).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
+                () -> map(string()).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'parent' should be MAP\\(STRING\\), but it is STRING"));
     }
 
@@ -587,7 +586,7 @@ public class SchemaTest {
         map(object(
                 field("x", integer()),
                 field("y", integer())
-        )).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
+        )).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
 
     }
 
@@ -603,7 +602,7 @@ public class SchemaTest {
                 () -> map(object(
                         field("x", integer()),
                         field("y", integer())
-                )).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
+                )).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'parent\\[key.\\]' should be OBJECT\\(x, y\\), but it is NUMBER"));
     }
 
@@ -615,7 +614,7 @@ public class SchemaTest {
                         + "  key2: 24\n"
         );
 
-        map(integer()).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
+        map(integer()).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
     }
 
     @Test
@@ -627,7 +626,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> map(integer()).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
+                () -> map(integer()).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'parent\\[key1\\]' should be INTEGER, but it is STRING"));
     }
 
@@ -639,7 +638,7 @@ public class SchemaTest {
                         + "  key2: 'two'\n"
         );
 
-        map(string()).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
+        map(string()).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
     }
 
     @Test
@@ -651,7 +650,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> map(string()).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
+                () -> map(string()).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'parent\\[key1\\]' should be STRING, but it is NUMBER"));
     }
 
@@ -663,7 +662,7 @@ public class SchemaTest {
                         + "  nok: False\n"
         );
 
-        map(bool()).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
+        map(bool()).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
     }
 
     @Test
@@ -675,7 +674,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> map(bool()).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
+                () -> map(bool()).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'parent\\[ok\\]' should be BOOLEAN, but it is STRING"));
     }
 
@@ -691,7 +690,7 @@ public class SchemaTest {
                         + "    - 4\n"
         );
 
-        map(list(integer())).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
+        map(list(integer())).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
     }
 
     @Test
@@ -707,7 +706,7 @@ public class SchemaTest {
         );
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> map(list(integer())).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
+                () -> map(list(integer())).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'parent\\[key1\\]' should be LIST\\(INTEGER\\), but it is OBJECT"));
     }
 
@@ -728,7 +727,7 @@ public class SchemaTest {
                         field("y", integer()
                         )
                 )
-        )).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
+        )).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS);
     }
 
     @Test
@@ -748,7 +747,7 @@ public class SchemaTest {
                                 field("y", integer()
                                 )
                         )
-                )).validate(ImmutableList.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
+                )).validate(List.of("parent"), root, root.get("parent"), NO_EXTENSIONS));
         assertThat(e.getMessage(), matchesPattern("Unexpected field type. Field 'parent\\[mapKey\\]\\[0\\]' should be OBJECT\\(x, y\\), but it is STRING"));
     }
 
@@ -784,11 +783,11 @@ public class SchemaTest {
 
         Schema.FieldType myOr = or(list(string()), string());
 
-        myOr.validate(ImmutableList.of("pipeline"), root, root.get("pipeline"), NO_EXTENSIONS);
-        myOr.validate(ImmutableList.of("pipeline2"), root, root.get("pipeline2"), NO_EXTENSIONS);
+        myOr.validate(List.of("pipeline"), root, root.get("pipeline"), NO_EXTENSIONS);
+        myOr.validate(List.of("pipeline2"), root, root.get("pipeline2"), NO_EXTENSIONS);
 
         Exception e = assertThrows(SchemaValidationException.class,
-                () -> myOr.validate(ImmutableList.of("pipeline3"), root, root.get("pipeline3"), NO_EXTENSIONS));
+                () -> myOr.validate(List.of("pipeline3"), root, root.get("pipeline3"), NO_EXTENSIONS));
 
         assertEquals("Unexpected field type. Field 'pipeline3' should be OR(LIST(STRING), STRING), but it is NUMBER", e.getMessage());
     }
